# pwn-coding-challenges

problem-1/: .envrc  .gitignore  README.md  pyproject.toml  setup.cfg
problem-1/src/cprofile/: __init__.py  __main__.py
problem-1/tests/: test_humanize_duration.py
problem-2/: README.md  products-for-buyer.sql  schema-pgdump.sql  schema-serialdump.sql
problem-2/schemaspy/: anomalies.html  columns.html  constraints.html  deletionOrder.txt  index.html  info-html.txt  insertionOrder.txt  marketplace.public.xml  orphans.html  relationships.html  routines.html
problem-2/schemaspy/diagrams/orphans/: buyer.1degree.dot  product_catalog.1degree.dot
problem-2/schemaspy/diagrams/summary/: relationships.real.compact.dot  relationships.real.large.dot
problem-2/schemaspy/diagrams/tables/: buyer.1degree.dot  buyer.2degrees.dot  catalog.1degree.dot  catalog.2degrees.dot  marketplace_buyer.1degree.dot  marketplace_buyer.2degrees.dot  marketplace_catalog.1degree.dot  marketplace_product.1degree.dot  marketplace_product.2degrees.dot  product.1degree.dot  product.2degrees.dot  product_catalog.1degree.dot  product_catalog.2degrees.dot
problem-2/schemaspy/tables/: buyer.html  catalog.html  marketplace_buyer.html  marketplace_catalog.html  marketplace_product.html  product.html  product_catalog.html
